--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,29 @@
-streamlit==1.16.0
-openai==0.27.0
-PyPDF2==1.26.0
+streamlit>=1.27.0
+requests>=2.28.1
+pandas>=1.5.0
+PyPDF2>=3.0.0
+python-docx>=0.8.11
+langchain>=0.0.267
+langchain-openai>=0.0.2
+faiss-cpu>=1.7.4
+openai>=1.3.0
+duckduckgo-search>=3.9.0
+beautifulsoup4>=4.12.2
+python-dotenv>=1.0.0
+uuid>=1.30
+matplotlib>=3.7.1
+plotly>=5.18.0
+streamlit-chat>=0.1.1
+tiktoken>=0.5.1
+tenacity>=8.2.3
+urllib3>=1.26.16
+boto3>=1.28.53
+docker>=6.1.3
+pinecone-client>=2.2.4
+pydantic>=1.10.8
+pillow>=9.5.0
+pdf2image>=1.16.3
+pytesseract>=0.3.10
+scikit-learn>=1.3.0
+docx2txt>=0.8
+python-magic>=0.4.27
